<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/navigation_notifications"
		android:icon="@drawable/ic_home_black_24dp"
		android:title="@string/title_home" />

	<item
		android:id="@+id/navigation_home"
		android:icon="@drawable/ic_dashboard_black_24dp"
		android:title="@string/title_measure" />

	<item
		android:id="@+id/navigation_dashboard"
		android:icon="@android:drawable/ic_menu_sort_by_size"
		android:title="@string/title_dashboard" />
		
	<item
        android:id="@+id/navigation_goal"
        android:icon="@android:drawable/ic_dialog_info"
        android:title="@string/title_goal" />

	<item
		android:id="@+id/navigation_calendar"
		android:icon="@android:drawable/ic_menu_my_calendar"
		android:title="@string/title_calendar" />
		
</menu>

